# StarkWhaleAlert

./: .env  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  package-lock.json  package.json  rustfmt.toml  script.sh  token.example.json
.cargo/: config.toml
.github/workflows/: ci.yml  rust-ci.yml
analyse/: index.ts
crates/starkwhale-alert/: Cargo.toml
crates/starkwhale-alert/src/: api.rs  composer.rs  consts.rs  db.rs  formatter.rs  logger.rs  main.rs  starknet_id.rs  twitter.rs
crates/twitter-login/: Cargo.toml
crates/twitter-login/src/: main.rs
db/: block.json
scripts/: index.ts  twitterLogin.ts
src/: analyse.ts  api.rs  consts.rs  db.rs  db.ts  default.ts  formatter.rs  formatter.ts  index.ts  logger.rs  logger.ts  main.rs  models.ts  rateApi.ts  starknet_id.rs  tweet.ts  twitter.rs  twitter.ts  twitterLogin.ts
tests/: formatter.test.ts  twitter.test.ts
