[package]
name = "stark_whale_alert"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
rstest = "0.18.2"
serde = { version = "1.0.188", features = ["derive"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
koit = "0.2.0"
twitter-v2 = "0.1.8"
anyhow = "1.0.75"
time = "0.3.28"
serde_json = "1.0.105"
