[package]
name = "starkwhale_alert"
version = "0.1.0"
edition = "2021"
# TODO ADD starknet-id = { git = "https://github.com/starknet-id/starknet-id.rs.git", branch = "master" }
[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
rstest = "0.18.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
starknet = "0.12.0"
# starknet-id = { git = "https://github.com/starknet-id/starknet-id.rs.git", branch = "master" }
koit = "0.2.0"
twitter-v2 = "0.1.8"
bigdecimal = "0.4.1"
log = "0.4.20"
chrono = "0.4.29"
dotenv_codegen = "0.15.0"
num-bigint = "0.4.4"
openssl = { version = "0.10", features = ["vendored"] }
num-format = "0.4.4"