[package]
name = "twitter_login"
version = "0.1.0"
edition = "2021"

[features]
default = ["oauth2", "native-tls"]
rustls-tls = ["oauth2/rustls-tls", "reqwest/rustls-tls"]
native-tls = ["oauth2/native-tls", "reqwest/native-tls"]
arbitrary_precision = ["serde_json/arbitrary_precision"]

[dependencies]
dotenv = "0.15.0"
oauth2 = { version = "4.1", optional = true, default-features = false, features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["sync", "macros", "rt-multi-thread"] }
twitter-v2 = "0.1.8"
axum = "0.4.8"
tower-http = { version = "0.2.5", features = ["trace"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }